bit of quality of life to the margin spacing on desktop. fixed border radius on module

--- a/src/css/layout/nav-module.css
+++ b/src/css/layout/nav-module.css
@@ -7,7 +7,7 @@
     width: 80vw;
     height: 100vh;
     background-color: var(--color-gray-900);
-    border-radius: var(--border-radius-md);
+    border-radius: var(--border-radius-lg) 0 0 var(--border-radius-lg);
     padding: 0 2rem;
     display: flex;
     flex-direction: column;
